test/Error/Unify/IfDef/Test.ds

-- Checks type error reporting.
--	Wrong type for descriminant in if-then-else statement (expects Bool).

x	= 5;
y	= if x
		then "perch"
		else "gourami";
		
